feat(ingress): configure management HTTPS after login
